--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "cSpell.enabled": false,
     "files.associations": {
-        "vector": "cpp"
+        "vector": "cpp",
+        "algorithm": "cpp",
+        "random": "cpp",
+        "xlocale": "cpp",
+        "xlocnum": "cpp",
+        "functional": "cpp"
     }
 }
