--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,9 @@
         "xtr1common": "cpp",
         "xtree": "cpp",
         "xutility": "cpp",
-        "atomic": "cpp"
+        "atomic": "cpp",
+        "cctype": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp"
     }
 }
